# metabot

./: CMakeLists.txt  Makefile  UARTSerial.cpp  commands.cpp  config.h  crc16.cpp  dxl.cpp  dxl_commands.cpp  function.cpp  function.h  kinematic.h  leds.cpp  lib.cpp  main.cpp  mapping.cpp  motion.cpp  motors.cpp  package.xml  terminal.cpp
aversive/: buffer.hpp
wirish/: UARTSerial.h  pin.h  time.h  wirish.h
